--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php" : "^7.0"
+        "php": "^7.0",
+        "nesbot/carbon": "^1.21"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
