--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.0",
-        "nesbot/carbon": "^1.15"
+        "nesbot/carbon": "^1.15",
+        "spatie/phpunit-snapshot-assertions": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
