--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.0",
         "nesbot/carbon": "^1.15",
+        "spatie/macroable": "^1.0",
         "spatie/phpunit-snapshot-assertions": "^1.0"
     },
     "require-dev": {
