--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "spatie/macroable": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*",
+        "phpunit/phpunit": "^6.4",
         "spatie/phpunit-snapshot-assertions": "^1.0"
     },
     "autoload": {
