add intl requirement

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.0",
+        "ext-intl" : "*",
         "nesbot/carbon": "^1.15",
         "spatie/macroable": "^1.0"
     },
