--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,15 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.2",
         "ext-intl" : "*",
+        "ext-json": "*",
         "nesbot/carbon": "^1.15|^2.0",
         "spatie/macroable": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4",
-        "spatie/phpunit-snapshot-assertions": "^1.0"
+        "phpunit/phpunit": "^8.0",
+        "spatie/phpunit-snapshot-assertions": "^2.0"
     },
     "autoload": {
         "psr-4": {
