--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "ext-intl": "*",
         "ext-json": "*",
         "nesbot/carbon": "^2.3",
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "spatie/phpunit-snapshot-assertions": "^2.0"
+        "spatie/phpunit-snapshot-assertions": "^4.2.3"
     },
     "autoload": {
         "psr-4": {
