--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,15 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.4|^8.0",
         "ext-intl": "*",
         "ext-json": "*",
-        "nesbot/carbon": "^2.3",
+        "nesbot/carbon": "^2.23",
         "spatie/macroable": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "spatie/phpunit-snapshot-assertions": "^2.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/phpunit-snapshot-assertions": "^4.2.3"
     },
     "autoload": {
         "psr-4": {
