--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "ext-intl": "*",
         "ext-json": "*",
         "nesbot/carbon": "^2.23",
-        "spatie/macroable": "^1.0"
+        "spatie/macroable": "^1.0||^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
