Support publically available versions of php.
Since PHP 7.3 is still publicly supported, libraries that depend on this package need it to still support the oldest supported version of php, which as of Summer 2021, is 7.3

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": ">=7.3",
         "ext-intl": "*",
         "ext-json": "*",
         "nesbot/carbon": "^2.23",
