--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/pest"
     },
     "config": {
         "sort-packages": true,
