Convert all tests to pest (#180)
* install Pest

* refactor: `DownloaderTest`

* refactor: `HelpersTest`

* refactor: `SslCertificateFromFileTest`

* refactor: `SslCertificateFromStringTest`

* wip

* refactor: `SslCertificateTest`

* refactor: `UrlTest`

* feat: replace test suite in Github action and `composer.json`

* Fix styling

Co-authored-by: alexmanase <alexmanase@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "spatie/macroable": "^1.0|^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "pestphp/pest": "^1.22",
+        "spatie/pest-plugin-snapshots": "^1.1",
         "spatie/phpunit-snapshot-assertions": "^4.2.3",
         "spatie/ray": "^1.30"
     },
@@ -51,9 +52,12 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/pest"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
