--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": "^8.1",
         "ext-intl": "*",
         "ext-json": "*",
-        "nesbot/carbon": "^2.68.1",
+        "nesbot/carbon": "^2.68.1|^3.0",
         "spatie/macroable": "^2.0"
     },
     "require-dev": {
